syntax = "proto3";
import "user_properties.proto";
import "commontype/QoS.proto";

package checktypes;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.plugin.authprovider.type";
option java_outer_classname = "CheckTypesProto";
option optimize_for = SPEED;

message PubAction {
  string topic = 1;
  commontype.QoS qos = 2;
  bool isRetained = 3;
  auth_provider.UserProperties userProps = 4;
}

message SubAction {
  string topicFilter = 1;
  commontype.QoS qos = 2;
  auth_provider.UserProperties userProps = 5;
}

message UnsubAction {
  string topicFilter = 1;
  auth_provider.UserProperties userProps = 2;
}

message MQTTAction {
  oneof Type{
    PubAction pub = 1;
    SubAction sub = 2;
    UnsubAction unsub = 3;
  }
}
